fix: excessive margin top on mobile in landing

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,6 +1,10 @@
 .Landing {
   max-width: 550px;
   padding: 120px 25px;
+
+  @media (max-width: 420px) {
+    padding: 90px 25px;
+  }
   &__menu {
     width: 100%;
     position: fixed;
